src/test/deca/context/valid/class/method_this_expr.deca
/// Description:
// 	  Syntax for a method only containing the expression 'this'
// 	
// Resultats:
// 	  ok
// Historique:
// 	  cree le 19/01/2023

class A {
    void f() {
        this;
    }
}